[package]
name = "nutek-lib"
authors = ["Neosb <museyoucoulduse@gmail.com>"]
version = "0.1.0"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/phoenix-journey/nutek-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soup = "0.5.1"
reqwest = { version = "0.11" }
tokio = { version = "1.18.1", features = ["full"] }
shiplift = "0.7.0"
futures = "0.3.21"
open = "2.1.2"
home = "0.5.3"
uuid = { version = "1.0.0", features = ["v4"] }

[lib]
#name = "foo"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
#plugin = false         # Used as a compiler plugin (deprecated).
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
#edition = "2015"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).